[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/AssetsAlternativo/DialogueBox/Texboxdefinitivaedecente.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/PlayerLife.gd" type="Script" id=3]
[ext_resource path="res://Scripts/text_component.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Input.gd" type="Script" id=5]
[ext_resource path="res://UI/Battle_result/ChiKareGo2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/AssetsAlternativo/Fonts/thaleah_fat.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/AssetsAlternativo/SpritesheetAlt/battle-background.webp" type="Texture" id=8]
[ext_resource path="res://Cenas/LifeBar.gd" type="Script" id=9]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]

[node name="battle-background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.975238, 1.11111 )
texture = ExtResource( 8 )

[node name="TextComponent" type="Control" parent="."]
margin_left = 544.0
margin_top = 336.0
margin_right = 960.0
margin_bottom = 512.0
script = ExtResource( 4 )

[node name="Texboxdefinitivaedecente" type="Sprite" parent="TextComponent"]
position = Vector2( 248, 152 )
scale = Vector2( 0.554667, 1.17333 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="input_text" type="RichTextLabel" parent="TextComponent"]
margin_left = 56.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemyLife" type="ProgressBar" parent="."]
margin_left = 712.0
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 53.0
rect_scale = Vector2( 0.992151, 1.06085 )
rect_pivot_offset = Vector2( -56.4431, -180.987 )
custom_fonts/font = SubResource( 1 )
step = 1.0
value = 100.0
script = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="EnemyLife"]
margin_left = 9.0
margin_top = -18.0
margin_right = 65.0
margin_bottom = -3.0
custom_fonts/normal_font = SubResource( 3 )
text = "Enemy"

[node name="PlayerLife" type="ProgressBar" parent="."]
margin_left = 16.0
margin_top = 544.0
margin_right = 314.0
margin_bottom = 573.0
rect_scale = Vector2( 0.992151, 1.06085 )
rect_pivot_offset = Vector2( -56.4431, -180.987 )
custom_fonts/font = SubResource( 1 )
step = 1.0
value = 100.0
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerLife"]
margin_left = 9.0
margin_top = -18.0
margin_right = 70.0
margin_bottom = -3.0
custom_fonts/normal_font = SubResource( 4 )
text = "Player"

[node name="enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 672, 248 )
scale = Vector2( -7, 7 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 304, 336 )
scale = Vector2( 10, 10 )
script = null
